@@ -1,17 +1,15 @@
 require 'spec_helper'
 
 describe 'vnc::client' do
-  context  'supported operating systems' do
-    on_supported_os.each do |os, facts|
+  on_supported_os.each do |os, facts|
+    context "on #{os}" do
       let(:facts) do
         facts
       end
 
-      context "on #{os}" do
-        it { should create_class('vnc::client') }
-        it { should compile.with_all_deps }
-        it { should contain_package('tigervnc') }
-      end
+      it { should compile.with_all_deps }
+      it { should create_class('vnc::client') }
+      it { should contain_package('tigervnc') }
     end
   end
 end
