@@ -1,3 +1,7 @@
+* Thu Sep 13 2018 Nick Miller <nick.miller@onyxpoint.com> - 7.0.0-0
+- Add support for Puppet 5 and OEL
+- Convert docs to yard tags and add reference.md
+
 * Fri Jun 22 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0-0
 - Remove automatic setting of the XDMCP setting in GDM - BREAKING
   - It was determined that this should be something that the administrator
